--- a/google/google_maps/clientes/marker_dom_events.html
+++ b/google/google_maps/clientes/marker_dom_events.html
@@ -36,7 +36,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWSqmZmuMhkCKGX54RwL9TZXqpUhS7EEg&callback=initMap">
     </script>
   </body>
 </html>
