se crean conexiones para realizarlas desde postgresql a google maps

--- a/google/google_maps/clientes/apptics_agua_potable_postgres.html
+++ b/google/google_maps/clientes/apptics_agua_potable_postgres.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body onload = "loadMap()">
-    <h2>Quito Businnes Hotels</h2>
+    <h2>Conexiones de Agua Potable Cnl. Marcelino Maridueña</h2>
     <div class="">
       <input type="text" name="txt_codigo_catastral" id="txt_codigo_catastral" value="">
     </div>
@@ -57,12 +57,12 @@
             //window.alert(paramGetData);
             document.getElementById('txt_codigo_catastral').value = paramGetData;
 
-            
+
           });
         }
       </script>
       <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWSqmZmuMhkCKGX54RwL9TZXqpUhS7EEg&callback=loadMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9waBz8rquebesyqHLvOMQnYvWVcmN-go&callback=loadMap">
       </script>
   </body>
 </html>
