--- a/google/google_maps/clientes/apptics_agua_potable.html
+++ b/google/google_maps/clientes/apptics_agua_potable.html
@@ -6,6 +6,9 @@
   </head>
   <body onload = "loadMap()">
     <h2>Quito Businnes Hotels</h2>
+    <div class="">
+      <input type="text" name="txt_codigo_catastral" id="txt_codigo_catastral" value="">
+    </div>
     <div id = "map" style = "width:640px; height:480px;"></div>
       <script>
 
@@ -45,9 +48,22 @@
             })
           }
         }
+
+        function obtenerDatosMarkerClick(marker, paramGetData, lat, lng) {
+          var infowindow = new google.maps.InfoWindow({
+            content: paramGetData
+          });
+          marker.addListener('click', function() {
+            infowindow.open(marker.get('map'), marker);
+            //window.alert(paramGetData);
+            document.getElementById('txt_codigo_catastral').value = paramGetData;
+
+
+          });
+        }
       </script>
       <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWSqmZmuMhkCKGX54RwL9TZXqpUhS7EEg&callback=loadMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9waBz8rquebesyqHLvOMQnYvWVcmN-go&callback=loadMap">
       </script>
   </body>
 </html>
