--- a/google/google_maps/postgresql/apptics_agua_potable_postgres.html
+++ b/google/google_maps/postgresql/apptics_agua_potable_postgres.html
@@ -5,14 +5,12 @@
     <title></title>
   </head>
   <body onload = "loadMap()">
-    <h2>Quito Businnes Hotels</h2>
+    <h2>Conexiones de Agua Potable Cnl. Marcelino Maridueña</h2>
     <div class="">
       <input type="text" name="txt_codigo_catastral" id="txt_codigo_catastral" value="">
     </div>
-    <div id = "map" style = "width:640px; height:480px;"></div>
+    <div id = "map" style = "width:100%; height:480px;"></div>
       <script>
-
-
         function obtenerJson(yourUrl){
             var Httpreq = new XMLHttpRequest(); // a new request
             Httpreq.open("GET",yourUrl,false);
@@ -22,23 +20,17 @@
 
         // fake JSON call
         function getJSONMarkers() {
-
-           /*const markers = [{ name:  "Rixos The Palm", location: [-0.2880436,-78.4472733]},
-            { name: "Shangri-La Hotel", location: [-0.286209,-78.4493546] },
-            { name: "Grand Hyatt", location: [-0.2866704,-78.4495692] }
-          ];*/
-
-          var json_obj = JSON.parse(obtenerJson('http://localhost/dropbox/php/google/google_maps/clientes/json_data/select_jsondata.php'));
+          var json_obj = JSON.parse(obtenerJson('http://localhost/dropbox/php/google/google_maps/postgresql/json_data/select_jsondata_postgres.php'));
           const markers = json_obj;
-          console.log(markers);
+          //console.log(markers);
           return markers;
         }
 
         function loadMap() {
           // Initialize Google Maps
           const mapOptions = {
-            center:new google.maps.LatLng(-2.2141194,-79.4490822),
-            zoom: 14
+            center:new google.maps.LatLng(-2.2132296,-79.4417224),
+            zoom: 16
           }
           const map = new google.maps.Map(document.getElementById("map"), mapOptions);
 
@@ -47,7 +39,7 @@
 
           // Initialize Google Markers
           for(cliente of clienteMarkers) {
-            let marker = new google.maps.Marker({
+            var marker = new google.maps.Marker({
               map: map,
               position: new google.maps.LatLng(cliente.location[0], cliente.location[1]),
               title: cliente.name
