subir un archivo desde android studio

--- a/Android/servicios/form.html
+++ b/Android/servicios/form.html
@@ -5,11 +5,12 @@
   <title></title>
  </head>
  <body>
-  <form class="" action="validar_usuario.php" method="post">
+  <!-- <form class="" action="validar_usuario.php" method="post"> -->
+  <form class="" action=" http://localhost/dropbox/portafolio.apptics.com.ec/agua_potable_mvc_php_postgresql/android/loginAndroid.php" method="post">
    <label for="">Usuario</label>
-   <input type="text" name="usuario" value="">
+   <input type="text" name="txt_usuario" value="">
    <label for="">Password</label>
-   <input type="password" name="password" value="">
+   <input type="txt_password" name="txt_password" value="">
    <input type="submit" name="" value="Enviar">
   </form>
  </body>
